cabal-version:       2.2
name:                cabbage
version:             0.1.0.0
synopsis:            A cabal package 'manager'.
-- description:
-- bug-reports:
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              nshepperd
maintainer:          nshepperd@gmail.com
-- copyright:
category:            Distribution
extra-source-files:  README.md

executable cabbage
  main-is:             Main.hs
  other-modules:       Cabbage.Config, Cabbage.Cabal, Cabbage.Parser
  -- other-extensions:
  build-depends:       base >= 4.12.0.0 && < 4.15.0.0
                     , Glob
                     , containers
                     , directory
                     , filepath
                     , optparse-applicative
                     , pretty-simple
                     , process
                     , temporary
                     , text
                     , xdg-basedir
                     , parsers
                     , trifecta

  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions:  LambdaCase, OverloadedStrings, RecordWildCards